Add shared memory